<resources>
    <string name="app_name">tester</string>
    <string name="hint_email">Gmail</string>
    <string name="login">Log in</string>
    <string name="password">password</string>
    <string name="login_button">log in</string>
    <string name="aboutTheApp"> על האפליקציה</string>
    <string name="contentAbout">האפליקציה הזו נולדה מתוך אהבה לאופנה ורצון לעשות סדר בארון – תרתי משמע. הרעיון פשוט: לעזור לך לבחור בגדים בקלות,ולנהל את הארון הדיגיטלי האישי שלך.\n\nאני איה גרף, תלמידת מגמת הנדסת תוכנה, בניתי את האפליקציה הזו בתור פרויקט גמר. תמיד רציתי פתרון פשוט ומהנה לבחירת בגדים, אז החלטתי ליצור אחד בעצמי.\n\nיש לך רעיון לשיפור? נתקלת בבאג? או סתם בא לך לפרגן? אני כאן!</string>
    <string name="contact">צור קשר</string>
    <string name="messy_clothes_clueless">messy clothes clueless</string>
    <string name="return_to_home_page">חזרה למסך הבית</string>
    <string name="back">Back</string>
    <string name="the_closet">the closet</string>
    <string name="your_gallery">גלריית הבגדים שלי</string>
    <string name="registration">register</string>
    <string name="gmail">דואר אלקטרוני</string>
    <string name="register_button">register</string>
    <string name="login_redirect">you already have an account? log in</string>
    <string name="welcome">welcome, join us!</string>
    <string name="signin_or_signup">please sign in or sign up in order to continue</string>
    <string name="sign_in">התחברות</string>
    <string name="pants_picture">pants picture</string>
    <string name="sign_up">הרשמה</string>
    <string name="shirt_picture">shirt picture</string>
    <string name="add_pants">הוסף מכנסיים</string>
    <string name="add_shirt">הוסף חולצה</string>
    <string name="wardrobepal">WardrobePal</string>
    <string name="head_line">choose your outfit of the day!</string>
    <string name="pants">מכנסיים</string>
    <string name="shirt">חולצה</string>
    <string name="shoes">נעליים</string>
    <string name="left_arrow_pants">חץ שמאלה עבור מכנסיים</string>
    <string name="right_arrow_pants">חץ ימינה עבור מכנסיים</string>
    <string name="left_arrow_shirt">חץ שמאלה עבור חולצה</string>
    <string name="right_arrow_shirt">חץ ימינה עבור חולצה</string>
    <string name="left_arrow_shoes">חץ שמאלה עבור נעליים</string>
    <string name="right_arrow_shoes">חץ ימינה עבור נעליים</string>
    <string name="random_clothes">ערבוב בגדים</string>
    <string name="daily_reminder"> daily reminder 🔔</string>
    <string name="log_out">log out</string>
    <string name="about_the_app">about the app</string>
    <string name="delete">מחק פריט</string>
    <string name="item">item</string>
    <string name="signup_redirect">you dont have an account? sign up</string>
    <string name="join_us">join_us</string>
    <string name="ai_outfit">ai outfit</string>
    <string name="ai_icon">ai icon</string>
</resources>